--- a/Matrix.html
+++ b/Matrix.html
@@ -267,7 +267,7 @@ var a = new <a href="Q.html">Q</a>.Matrix(
 						Appends a property named by <code>key</code> 
 						with a value of <code>value</code>
 						to both the 
-						<code>Q</code> object 
+						<code>Matrix</code> object 
 						and its <code><a href="#.constants">constants</a></code> property.
 					</dd>
 				</li>
@@ -570,424 +570,6 @@ new <a href="Q.html">Q</a>.Matrix(
 					</dd>
 				</li>
 			</ul>
-			<h4 id="Quantum_gates_2x2">Constants — Quantum gates, 2 × 2</h4>
-			<ul class="properties">
-				<li>
-					<dt id=".HADAMARD">HADAMARD</dt>
-					<dd>
-						<code class="value-type"><a href="Q.html">Q</a>.Matrix</code>
-						Initialized as
-<pre><code>
-new <a href="Q.html">Q</a>.Matrix(
-	[ Math.SQRT1_2,  Math.SQRT1_2 ],
-	[ Math.SQRT1_2, -Math.SQRT1_2 ])
-</code></pre>
-						Described by the following matrix:
-						<div class="maths">
-							<div class="matrix">
-								<div class="matrix-bracket-left"></div>
-								<div class="matrix-bracket-right"></div>
-								<table>
-									<tr>
-										<td>1</td><td>1</td>
-									</tr>
-									<tr>
-										<td>1</td><td>-1</td>
-									</tr>
-								</table>
-							</div>
-							×
-							<table class="division">
-								<tr class="dividend"><td>1</td></tr>
-								<tr class="divisor"><td>√ 2</td></tr>
-							</table>
-						</div>
-					</dd>
-				</li>
-				<li>
-					<dt id=".PAULI_X">PAULI_X</dt>
-					<dd>
-						<code class="value-type"><a href="Q.html">Q</a>.Matrix</code>
-						Initialized as
-<pre><code>
-new <a href="Q.html">Q</a>.Matrix(
-	[ 0, 1 ],
-	[ 1, 0 ])
-</code></pre>
-						Described by the following matrix:
-						<div class="maths">
-							<div class="matrix">
-								<div class="matrix-bracket-left"></div>
-								<div class="matrix-bracket-right"></div>
-								<table>
-									<tr>
-										<td>0</td><td>1</td>
-									</tr>
-									<tr>
-										<td>1</td><td>0</td>
-									</tr>
-								</table>
-							</div>
-						</div>
-					</dd>
-				</li>
-				<li>
-					<dt id=".PAULI_Y">PAULI_Y</dt>
-					<dd>
-						<code class="value-type"><a href="Q.html">Q</a>.Matrix</code>
-						Initialized as
-<pre><code>
-new <a href="Q.html">Q</a>.Matrix(
-	[ 0, new <a href="Q.html">Q</a>.<a href="ComplexNumber.html">ComplexNumber</a>( 0, -1 )],
-	[ new <a href="Q.html">Q</a>.<a href="ComplexNumber.html">ComplexNumber</a>( 0, 1 ),  0 ])
-</code></pre>
-						Described by the following matrix:
-						<div class="maths">
-							<div class="matrix">
-								<div class="matrix-bracket-left"></div>
-								<div class="matrix-bracket-right"></div>
-								<table>
-									<tr>
-										<td>0</td><td class="symbol">-i</td>
-									</tr>
-									<tr>
-										<td class="symbol">i</td><td>0</td>
-									</tr>
-								</table>
-							</div>
-						</div>
-					</dd>
-				</li>
-				<li>
-					<dt id=".PAULI_Z">PAULI_Z</dt>
-					<dd>
-						<code class="value-type"><a href="Q.html">Q</a>.Matrix</code>
-						Initialized as
-<pre><code>
-new <a href="Q.html">Q</a>.Matrix(
-	[ 1,  0 ],
-	[ 0, -1 ])
-</code></pre>
-						Described by the following matrix:
-						<div class="maths">
-							<div class="matrix">
-								<div class="matrix-bracket-left"></div>
-								<div class="matrix-bracket-right"></div>
-								<table>
-									<tr>
-										<td>1</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>-1</td>
-									</tr>
-								</table>
-							</div>
-						</div>
-					</dd>
-				</li>
-				<li>
-					<dt id=".PHASE">PHASE</dt>
-					<dd>
-						<code class="value-type"><a href="Q.html">Q</a>.Matrix</code>
-						Initialized as
-<pre><code>
-new <a href="Q.html">Q</a>.Matrix(
-	[ 1, 0 ],
-	[ 0, new <a href="Q.html">Q</a>.<a href="ComplexNumber.html">ComplexNumber</a>( 0, 1 )])
-</code></pre>
-						Described by the following matrix:
-						<div class="maths">
-							<div class="matrix">
-								<div class="matrix-bracket-left"></div>
-								<div class="matrix-bracket-right"></div>
-								<table>
-									<tr>
-										<td>1</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td class="symbol">i</td>
-									</tr>
-								</table>
-							</div>
-						</div>
-					</dd>
-				</li>
-				<li>
-					<dt id=".PI_8">PI_8</dt>
-					<dd>
-						<code class="value-type"><a href="Q.html">Q</a>.Matrix</code>
-						Initialized as
-<pre><code>
-new <a href="Q.html">Q</a>.Matrix(
-	[ 1, 0 ],
-	[ 0, <a href="Q.html">Q</a>.<a href="ComplexNumber.html">ComplexNumber</a>.<a href="ComplexNumber.htmll#.E">E</a>.<a href="ComplexNumber.htmll#.power">power</a>( new <a href="Q.html">Q</a>.<a href="ComplexNumber.html">ComplexNumber</a>( 0, Math.PI / 4 )) ])
-</code></pre>
-						Described by the following matrix:
-						<div class="maths">
-							<div class="matrix">
-								<div class="matrix-bracket-left"></div>
-								<div class="matrix-bracket-right"></div>
-								<table>
-									<tr>
-										<td>1</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td class="symbol">e<sup>iπ ÷ 4</sup></td>
-									</tr>
-								</table>
-							</div>
-						</div>
-					</dd>
-				</li>
-			</ul>
-			<h4 id="Quantum_gates_2x2">Constants — Quantum gates, 4 × 4</h4>
-			<ul class="properties">
-				<li>
-					<dt id=".CONTROLLED_NOT">CONTROLLED_NOT</dt>
-					<dd>
-						<code class="value-type"><a href="Q.html">Q</a>.Matrix</code>
-						Initialized as
-<pre><code>
-new <a href="Q.html">Q</a>.Matrix(<span class="comment">//  C-Not</span>
-	[ 1, 0, 0, 0 ],
-	[ 0, 1, 0, 0 ],
-	[ 0, 0, 0, 1 ],
-	[ 0, 0, 1, 0 ])
-</code></pre>
-						Described by the following matrix:
-						<div class="maths">
-							<div class="matrix">
-								<div class="matrix-bracket-left"></div>
-								<div class="matrix-bracket-right"></div>
-								<table>
-									<tr>
-										<td>1</td><td>0</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>1</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>0</td><td>1</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>1</td><td>0</td>
-									</tr>
-								</table>
-							</div>
-						</div>
-					</dd>
-				</li>
-				<li>
-					<dt id=".SWAP">SWAP</dt>
-					<dd>
-						<code class="value-type"><a href="Q.html">Q</a>.Matrix</code>
-						Initialized as
-<pre><code>
-new <a href="Q.html">Q</a>.Matrix(
-	[ 1, 0, 0, 0 ],
-	[ 0, 0, 1, 0 ],
-	[ 0, 1, 0, 0 ],
-	[ 0, 0, 0, 1 ])
-</code></pre>
-						Described by the following matrix:
-						<div class="maths">
-							<div class="matrix">
-								<div class="matrix-bracket-left"></div>
-								<div class="matrix-bracket-right"></div>
-								<table>
-									<tr>
-										<td>1</td><td>0</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>1</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>1</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>0</td><td>1</td>
-									</tr>
-								</table>
-							</div>
-						</div>
-					</dd>
-				</li>
-				<li>
-					<dt id=".CONTROLLED_Z">CONTROLLED_Z</dt>
-					<dd>
-						<code class="value-type"><a href="Q.html">Q</a>.Matrix</code>
-						Initialized as
-<pre><code>
-new <a href="Q.html">Q</a>.Matrix(
-	[ 1, 0, 0,  0 ],
-	[ 0, 1, 0,  0 ],
-	[ 0, 0, 1,  0 ],
-	[ 0, 0, 0, -1 ])
-</code></pre>
-						Described by the following matrix:
-						<div class="maths">
-							<div class="matrix">
-								<div class="matrix-bracket-left"></div>
-								<div class="matrix-bracket-right"></div>
-								<table>
-									<tr>
-										<td>1</td><td>0</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>1</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>1</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>0</td><td>-1</td>
-									</tr>
-								</table>
-							</div>
-						</div>
-					</dd>
-				</li>
-				<li>
-					<dt id=".CONTROLLED_PHASE">CONTROLLED_PHASE</dt>
-					<dd>
-						<code class="value-type"><a href="Q.html">Q</a>.Matrix</code>
-						Initialized as
-<pre><code>
-new <a href="Q.html">Q</a>.Matrix(
-	[ 1, 0, 0, 0 ],
-	[ 0, 1, 0, 0 ],
-	[ 0, 0, 1, 0 ],
-	[ 0, 0, 0, new <a href="Q.html">Q</a>.<a href="ComplexNumber.html">ComplexNumber</a>( 0, 1 )])
-</code></pre>
-						Described by the following matrix:
-						<div class="maths">
-							<div class="matrix">
-								<div class="matrix-bracket-left"></div>
-								<div class="matrix-bracket-right"></div>
-								<table>
-									<tr>
-										<td>1</td><td>0</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>1</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>1</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>0</td><td class="symbol">i</td>
-									</tr>
-								</table>
-							</div>
-						</div>
-					</dd>
-				</li>
-			</ul>
-			<h4 id="Quantum_gates_2x2">Constants — Quantum gates, 8 × 8</h4>
-			<ul class="properties">
-				<li>
-					<dt id=".TOFFOLI">TOFFOLI</dt>
-					<dd>
-						<code class="value-type"><a href="Q.html">Q</a>.Matrix</code>
-						Initialized as
-<pre><code>
-new <a href="Q.html">Q</a>.Matrix(
-	[ 1, 0, 0, 0, 0, 0, 0, 0 ],
-	[ 0, 1, 0, 0, 0, 0, 0, 0 ],
-	[ 0, 0, 1, 0, 0, 0, 0, 0 ],
-	[ 0, 0, 0, 1, 0, 0, 0, 0 ],
-	[ 0, 0, 0, 0, 1, 0, 0, 0 ],
-	[ 0, 0, 0, 0, 0, 1, 0, 0 ],
-	[ 0, 0, 0, 0, 0, 0, 0, 1 ],
-	[ 0, 0, 0, 0, 0, 0, 1, 0 ])
-</code></pre>
-						Described by the following matrix:
-						<div class="maths">
-							<div class="matrix">
-								<div class="matrix-bracket-left"></div>
-								<div class="matrix-bracket-right"></div>
-								<table>
-									<tr>
-										<td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td>
-									</tr>
-								</table>
-							</div>
-						</div>
-					</dd>
-				</li>
-				<li>
-					<dt id=".CONTROLLED_SWAP">CONTROLLED_SWAP</dt>
-					<dd>
-						<code class="value-type"><a href="Q.html">Q</a>.Matrix</code>
-						Initialized as
-<pre><code>
-new <a href="Q.html">Q</a>.Matrix(<span class="comment">//  Fredkin</span>
-	[ 1, 0, 0, 0, 0, 0, 0, 0 ],
-	[ 0, 1, 0, 0, 0, 0, 0, 0 ],
-	[ 0, 0, 1, 0, 0, 0, 0, 0 ],
-	[ 0, 0, 0, 1, 0, 0, 0, 0 ],
-	[ 0, 0, 0, 0, 1, 0, 0, 0 ],
-	[ 0, 0, 0, 0, 0, 0, 1, 0 ],
-	[ 0, 0, 0, 0, 0, 1, 0, 0 ],
-	[ 0, 0, 0, 0, 0, 0, 0, 1 ])
-</code></pre>
-						Described by the following matrix:
-						<div class="maths">
-							<div class="matrix">
-								<div class="matrix-bracket-left"></div>
-								<div class="matrix-bracket-right"></div>
-								<table>
-									<tr>
-										<td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td>
-									</tr>
-									<tr>
-										<td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td>
-									</tr>
-								</table>
-							</div>
-						</div>
-					</dd>
-				</li>
-			</ul>			
 			<h4>Static inspection</h4>
 			<ul class="properties">
 				<li>
