--- a/Circuit.html
+++ b/Circuit.html
@@ -121,7 +121,7 @@
 				static method.
 				This function can accept text as an argument, 
 				but also accepts 
-				<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals">Template literals</a>,
+				<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals" target="_blank">Template literals</a>,
 				which use backticks rather than single or double quotes, 
 				and <em>do not require parentheses to invoke a function call.</em>
 				Note the backticks and lack of parentheses in this example.
