Some cleanup for mobile.

--- a/Circuit.html
+++ b/Circuit.html
@@ -78,7 +78,7 @@
 				Here we have a quantum circuit that is 5 moments long
 				and operates on just 2 quantum bits:
 			</p>
-			<div class="ape-diagram"></div>
+			<div class="ape-diagram qjs-circuit-container"></div>
 			<p>
 				Let’s read it from left to right, 
 				observing what happens at each passing moment.
@@ -288,7 +288,7 @@ q1  |0⟩───○────○──┤ C1 ├┤ Y ├┤ M │
 <pre><code>
 document.body.appendChild( ape.<a href="#.prototype.toDom">toDom</a>() )
 </code></pre>			
-			<div class="ape-diagram"></div>
+			<div class="ape-diagram qjs-circuit-container"></div>
 			<p class="coming-soon">
 				Note that this feature is still in its early stages
 				and is not yet fully functional.
